# CString

./: CMakeLists.txt  README  TestLog.txt  test.sh
include/: cstring.h  cstring_private.h
src/: cstring.c
test/: CMakeLists.txt  CStringBase.c  CStringProcess.c  CStringSearch.c
